# mishabot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  Kconfig.projbuild  discord_bot.c  discord_bot.h  idf_component.yml  llm8.c  llm8.h  main.c  misha_bot.c  misha_bot.h  wifi_station.c  wifi_station.h
